Add blueprint to upload image with API controlled by cloudflare workers

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 
-*LIST OF USED ENVIRONMENT VARIABLES TO STORE SENSITIVE/PRIVATE DATA
+**LIST OF USED ENVIRONMENT VARIABLES TO STORE SENSITIVE/PRIVATE DATA
+**PLEASE NOTE THAT THIS VARIABLES ARE STILL EXPOSED THROUGH NETWORK REQUEST
 
 VITE_FIREBASE_API_KEY=
 VITE_FIREBASE_AUTH_DOMAIN=
