--- a/firebase.json
+++ b/firebase.json
@@ -19,7 +19,8 @@
       "port": 9001
     },
     "ui": {
-      "enabled": true
+      "enabled": true,
+      "port": 4000
     },
     "singleProjectMode": true
   },
