--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "emulators": "firebase emulators:start --import=./emulator-data --export-on-exit=./emulator-data",
+    "emulators": "firebase emulators:start --import=./emulator-data --export-on-exit",
     "emulators:test": "firebase emulators:start --import=./emulator-data"
   },
   "dependencies": {
     "firebase": "^11.1.0",
+    "firebase-functions": "^6.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
